--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   chewie: ^1.2.2
   lottie: ^1.2.1
   orientation: ^1.3.0
+  adaptive_dialog: ^1.2.0
   flutter_swiper_null_safety: ^1.0.2
   url_launcher: ^6.0.10
   image_picker: ^0.8.4+4
@@ -34,6 +35,7 @@ dependencies:
   provider: ^5.0.0
   amap_flutter_map: ^3.0.0
   fluttertoast: ^8.0.8
+  flutter_easyloading: ^3.0.3
 
 dev_dependencies:
   flutter_test:
