--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_swiper_null_safety: ^1.0.2
   url_launcher: ^6.0.10
   image_picker: ^0.8.4+4
+  image_crop: ^0.4.0
   video_player: ^2.2.7
   transparent_image: ^2.0.0
   cached_network_image: ^3.2.0
